--- a/package.json
+++ b/package.json
@@ -46,18 +46,23 @@
     "@xenova/transformers": "^2.17.2",
     "autoprefixer": "10.4.15",
     "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.446.0",
     "mysql2": "^3.11.0",
     "next": "13.5.1",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.10",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
