--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@xenova/transformers": "^2.17.2",
     "autoprefixer": "10.4.15",
     "axios": "^1.12.2",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
