--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sequelize": "^6.37.3",
